<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/russian_input_text_layout"
        android:layout_width="409dp"
        android:layout_height="100dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="1dp"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/russian_input_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:digits="@string/allowed_russian_char"
            android:hint="@string/russian_block_editor"
            android:soundEffectsEnabled="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/to_translit"
        android:layout_width="183dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="6dp"
        android:contentDescription="@string/russian_block_button"
        android:text="@string/russian_block_button"
        app:layout_constraintEnd_toStartOf="@+id/to_russian"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/russian_input_text_layout" />

    <Button
        android:id="@+id/to_russian"
        android:layout_width="183dp"
        android:layout_height="56dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/translit_block_button"
        android:text="@string/translit_block_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/to_translit"
        app:layout_constraintTop_toBottomOf="@+id/russian_input_text_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/traslit_input_text_layout"
        android:layout_width="409dp"
        android:layout_height="100dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="1dp"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to_russian">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/traslit_input_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:digits="@string/allowed_translit_char"
            android:hint="@string/translit_block_editor"
            android:soundEffectsEnabled="false" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>